--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,16 @@
 
     <string name="sign_up_button">Зарегистрироваться</string>
     <string name="sign_in_button">Войти</string>
+    <string name="sign_in_or_sign_up">Войти или зарегестрироваться</string>
+
+    <!-- activity_edit -->
+
+    <string name="edit_ac_title">Название</string>
+    <string name="edit_ac_price">Цена</string>
+    <string name="edit_ac_discriptin">Описание</string>
+    <string name="edit_ac_tel">Телефон</string>
+
+
 
 
 </resources>
