--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="sign_in_button">Войти</string>
     <string name="sign_in_or_sign_up">Войти или зарегестрироваться</string>
 
-    <!-- activity_edit -->
+    <!-- EditActivity_OPEN -->
 
     <string name="edit_ac_title">Название</string>
     <string name="edit_ac_price">Цена</string>
@@ -26,6 +26,13 @@
 
     <string name="toggle_open">Открыть</string>
     <string name="toggle_close">Закрыть</string>
+
+    <!-- EditActivity_DELETE -->
+    <string name="delet_title">Удаление</string>
+    <string name="delet_message">Вы действительно хотите удалить объявление?</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
+    <string name="item_deleted">Картинка удалена</string>
 
 
 </resources>
